[package]
name = "cargo_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macro_demo = { path = "./macro_demo" }
macro_demo_trait = { path = "./macro_demo_trait" }
lazy_static = "1.4.0"
futures = "0.3.25"
