[package]
name = "http-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.1"
futures = "0.3.24"
http = "0.2.8"
hyper = { version = "0.14", features = ["full"] }
serde = "1.0.144"
serde_derive = "1.0.144"
serde_json = "1.0.85"
tokio = { version = "1", features = ["full"] }
