[package]
name = "tokio-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["full", "tracing"] }
tokio-stream = "0.1.9"
tokio-util = { version = "0.7.3", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.1", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log"] }
futures = { version = "0.3.0", features = ["thread-pool"] }

