[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8"
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4.22", default_features = false }
futures = { version = "0.3", default-features = false, features = ["std"] }
http = "0.2"
ipnet = "2"
regex = "1"