[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
k8s-openapi = { version = "0.16", default-features = false, features = [
    "v1_20",
] }
k8s-gateway-api = "0.7"
kube = { version = "0.75", default-features = false, features = [
    "client",
    "derive",
    "runtime",
] }
ipnet = { version = "2.5", features = ["json"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
thiserror = "1"
tokio = { version = "1", features = ["time"] }
tracing = "0.1"